deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projeto-orquestracao
spec: {}
status: {}
---
########################################################################
# 
# Deployment dos serviços utilizados no sistema de detecção de fraudes
# 
# Serviços: RabbitMQ, Redis e MinIO
# 
########################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3-management
        name: rabbitmq
        ports:
          - containerPort: 5672
          - containerPort: 15672
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c 
            - rabbitmq-diagnostics check_port_connectivity | grep -q Successfully
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis/redis-stack
        name: redis
        ports:
          - containerPort: 6379 
          - containerPort: 8001
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c 
            - redis-cli ping | grep -q PONG
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio
  name: minio
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - image: docker.io/bitnami/minio
        name: minio
        ports:
          - containerPort: 9000
          - containerPort: 9001
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c 
            - mc alias set myminio http://localhost:9000 "$MINIO_ROOT_USER" "$MINIO_ROOT_PASSWORD"; 
            - mc ping --exit --quiet myminio > /dev/null
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: projeto-orquestracao
spec:
  selector:
    app: rabbitmq
  ports:
  - name: console
    port: 15672
    targetPort: 15672
  - name: api
    port: 5672
    targetPort: 5672
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: projeto-orquestracao
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
  - name: http
    port: 8001
    targetPort: 8001
  - name: console
    port: 6379
    targetPort: 6379
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: projeto-orquestracao
spec:
  selector:
    app: minio
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  - name: console
    port: 9001
    targetPort: 9001
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: projeto-orquestracao
  labels:
    app: rabbitmq
spec:
  rules:
  - host: projeto.ada.rabbitmq
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-service
            port:
              number: 15672
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: projeto-orquestracao
  labels:
    app: redis
spec:
  rules:
  - host: projeto.ada.redis
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-service
            port:
              number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: projeto-orquestracao
  labels:
    app: minio
spec:
  rules:
  - host: projeto.ada.minio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
---
########################################################################
# 
# Deployment da palicação de detecção de fraudes
# 
# Pods:http://127.0.0.1:9000/relatorios-fraudes/relatorio_10944-4_20240407200431.txt
# 
########################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: preparar-ambiente
  name: preparar-ambiente
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preparar-ambiente
  template:
    metadata:
      labels:
        app: preparar-ambiente
    spec:
      containers:
      - image: rfrezende/app-projeto-ada:preparar-ambiente
        imagePullPolicy: Always
        name: preparar-ambiente
        resources:
          limits:
            memory: 50Mi
            cpu: ".1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: producer
  name: producer
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
      - image: rfrezende/app-projeto-ada:producer
        imagePullPolicy: Always
        name: producer
        resources:
          limits:
            memory: 50Mi
            cpu: ".1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: consumer
  name: consumer
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - image: rfrezende/app-projeto-ada:consumer
        imagePullPolicy: Always
        name: consumer
        resources:
          limits:
            memory: 50Mi
            cpu: ".1"
########################################################################
#
# Script para configuração do ambiente:
# 
# minikube addons enable ingress
# bash -c "echo '$(minikube ip) projeto.ada.minio' >> /etc/hosts"
# bash -c "echo '$(minikube ip) projeto.ada.rabbitmq' >> /etc/hosts"
# bash -c "echo '$(minikube ip) projeto.ada.redis' >> /etc/hosts"
#
########################################################################

########################################################################
# 
# Comandos auxiliares:
# kubectl config set-context --current --namespace=projeto-orquestracao
# kubectl proxy --address 0.0.0.0 --accept-hosts 192.168.1.10
# 
########################################################################
